--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,12 @@
 @import './common';
 @import './example';
+@import "./gallery";
+img {
+    display: block;
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
